--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,16 @@
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
     upstream frontend {
-        server frontend:3000;
+        server react-frontend:3000;  # Replace with your frontend service name
     }
 
     upstream backend {
-        server backend:8000;
+        server fastapi-backend:8000;  # Replace with your backend service name
     }
 
     server {
         listen 80;
-
-        server_name vaifalwednesday.com www.vaifalwednesday.com;
 
         location / {
             proxy_pass http://frontend;
