additional dockerfile configs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,20 @@
+# nginx/nginx.conf
 events {}
 
 http {
-    upstream frontend {
-        server react-frontend:3000;  # Replace with your frontend service name
-    }
-
-    upstream backend {
-        server fastapi-backend:8000;  # Replace with your backend service name
-    }
-
     server {
         listen 80;
 
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/ {
-            proxy_pass http://backend;
+        location /api {
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
