--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,29 @@
 version: '3.8'
 
 services:
-  react-frontend:
-    container_name: react-frontend
+  frontend:
     build:
       context: ./react-frontend
-      dockerfile: Dockerfile
+    container_name: frontend
     ports:
       - "3000:3000"
-    networks:
-      - app-network
+    depends_on:
+      - backend
 
-  fastapi-backend:
-    container_name: fastapi-backend
+  backend:
     build:
       context: ./fastapi-backend
-      dockerfile: Dockerfile
+    container_name: backend
     ports:
       - "8000:8000"
-    networks:
-      - app-network
 
   nginx:
+    image: nginx:alpine
     container_name: nginx
-    image: nginx:latest
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - react-frontend
-      - fastapi-backend
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+      - frontend
+      - backend
