--- a/fastapi-backend/Dockerfile
+++ b/fastapi-backend/Dockerfile
@@ -1,17 +1,12 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.9-slim
+# Dockerfile for FastAPI Backend
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+COPY requirements.txt .
 
-# Install dependencies
-RUN pip install --no-cache-dir fastapi uvicorn fastapi-cors
+RUN pip install -r requirements.txt
 
-# Expose the port on which the FastAPI app will run
-EXPOSE 8000
+COPY . .
 
-# Command to run the FastAPI server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
