--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,46 @@
-version: '3.8'
+version: '3.7'
 
 services:
   frontend:
     build:
       context: ./react-frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
+    restart: unless-stopped
+    networks:
+      - app-network
 
   backend:
     build:
       context: ./fastapi-backend
-    container_name: backend
+    restart: unless-stopped
+    networks:
+      - app-network
     ports:
       - "8000:8000"
 
   nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "80:80"
+    image: nginx:latest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/ssl-data:/data/letsencrypt
+    ports:
+      - "80:80"
+      - "443:443"
     depends_on:
       - frontend
       - backend
+    networks:
+      - app-network
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/ssl-data:/data/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
