--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,32 @@
-# nginx/nginx.conf
-events {}
+server {
+    listen 80;
+    server_name www.vaifalwednesday.com;
 
-http {
-    server {
-        listen 80;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-        location / {
-            proxy_pass http://frontend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+server {
+    listen 443 ssl;
+    server_name www.vaifalwednesday.com;
 
-        location /api {
-            proxy_pass http://backend:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    ssl_certificate /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem;
+
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
