--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,45 +2,32 @@ version: '3.7'
 
 services:
   frontend:
-    build:
-      context: ./react-frontend
-    restart: unless-stopped
-    networks:
-      - app-network
+    build: ./react-frontend
+    container_name: frontend
+    restart: always
 
   backend:
-    build:
-      context: ./fastapi-backend
-    restart: unless-stopped
-    networks:
-      - app-network
-    ports:
-      - "8000:8000"
+    build: ./fastapi-backend
+    container_name: backend
+    restart: always
 
   nginx:
     image: nginx:latest
+    container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/ssl-data:/data/letsencrypt
+      - /data/letsencrypt:/data/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
     ports:
       - "80:80"
       - "443:443"
     depends_on:
       - frontend
       - backend
-    networks:
-      - app-network
 
   certbot:
     image: certbot/certbot
     volumes:
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/ssl-data:/data/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /data/letsencrypt:/data/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h; done;'"
