--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,40 +1,27 @@
-server {
-    listen 80;
-    server_name www.vaifalwednesday.com;
+user nginx;
+worker_processes 1;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    location /.well-known/acme-challenge/ {
-        root /data/letsencrypt;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name www.vaifalwednesday.com;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    access_log /var/log/nginx/access.log main;
 
-    location /api {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    sendfile on;
+    #tcp_nopush on;
 
-    location /.well-known/acme-challenge/ {
-        root /data/letsencrypt;
-    }
+    keepalive_timeout 65;
+
+    include /etc/nginx/conf.d/*.conf;
 }
