--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,26 @@
-version: '3.7'
-
+version: '3'
 services:
   frontend:
-    build: ./react-frontend
-    container_name: frontend
+    build:
+      context: ./react-frontend
+    ports:
+      - "80:80"
     restart: always
 
   backend:
-    build: ./fastapi-backend
-    container_name: backend
+    build:
+      context: ./fastapi-backend
+    ports:
+      - "8000:8000"
     restart: always
 
   nginx:
     image: nginx:latest
-    container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - /data/letsencrypt:/data/letsencrypt
-      - /etc/letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem
+      - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - frontend
-      - backend
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /data/letsencrypt:/data/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h; done;'"
+    restart: always
