--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,38 @@
 version: '3'
+
 services:
+  backend:
+    build: 
+      context: .
+      dockerfile: Dockerfile.backend
+    ports:
+      - "8000:8000"  # Adjust if necessary
+    restart: always
+    depends_on:
+      - db  # Example dependency
+
   frontend:
     build:
-      context: ./react-frontend
+      context: .
+      dockerfile: Dockerfile.frontend
     ports:
-      - "80:80"
-    restart: always
-
-  backend:
-    build:
-      context: ./fastapi-backend
-    ports:
-      - "8000:8000"
+      - "8080:80"  # Adjust to avoid port conflict
     restart: always
 
   nginx:
     image: nginx:latest
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem
-      - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem
     ports:
-      - "80:80"
-      - "443:443"
+      - "443:443"  # SSL port
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
+      - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
+    depends_on:
+      - backend
+      - frontend
     restart: always
+
+networks:
+  default:
+    external:
+      name: react-fastapi-digitalocean-deploy_default
