--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,29 @@
 version: '3'
 
 services:
-  backend:
-    build: 
-      context: .
-      dockerfile: Dockerfile.backend
-    ports:
-      - "8000:8000"  # Adjust if necessary
-    restart: always
-
   frontend:
     build:
-      context: .
-      dockerfile: Dockerfile.frontend
+      context: ./react-frontend
     ports:
-      - "8080:80"  # Adjust to avoid port conflict
+      - "8080:80"  # Map container port 80 to host port 8080 to avoid conflict with nginx
+    restart: always
+
+  backend:
+    build:
+      context: ./fastapi-backend
+    ports:
+      - "8000:8000"
     restart: always
 
   nginx:
     image: nginx:latest
-    ports:
-      - "443:443"  # SSL port
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
       - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
-    depends_on:
-      - backend
-      - frontend
+    ports:
+      - "80:80"    # HTTP port
+      - "443:443"  # HTTPS port
     restart: always
 
 networks:
