--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,22 @@
 events {}
 
 http {
-    include /etc/nginx/conf.d/*.conf;
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
 }
