--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
   frontend:
     build:
       context: ./react-frontend
+    command: sh -c "npm run build && npx serve -s build"
     ports:
-      - "8080:80"  # Map container port 80 to host port 8080 to avoid conflict with nginx
+      - "3000:3000"
     restart: always
+    networks:
+      - default
 
   backend:
     build:
@@ -14,20 +17,22 @@ services:
     ports:
       - "8000:8000"
     restart: always
+    networks:
+      - default
 
   nginx:
     image: nginx:latest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
       - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
     ports:
-      - "80:80"    # HTTP port
-      - "443:443"  # HTTPS port
+      - "80:80"
+      - "443:443"
     restart: always
-    depends_on:
-      - frontend
-      - backend
+    networks:
+      - default
 
 networks:
   default:
