--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,21 @@ services:
     networks:
       - default
 
-  nginx:
-    image: nginx:latest
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
-      - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
-    ports:
-      - "80:80"
-      - "443:443"
-    restart: always
-    networks:
-      - default
+#   nginx:
+#     image: nginx:latest
+#     volumes:
+#       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#       - ./nginx/conf.d:/etc/nginx/conf.d
+#       - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
+#       - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
+#     ports:
+#       - "80:80"
+#       - "443:443"
+#     restart: always
+#     networks:
+#       - default
 
-networks:
-  default:
-    external:
-      name: react-fastapi-digitalocean-deploy_default
+# networks:
+#   default:
+#     external:
+#       name: react-fastapi-digitalocean-deploy_default
