--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Debug SSH Key
+      run: |
+        echo "${{ secrets.DO_SSH_PRIVATE_KEY }}" > github_actions_key
+        cat github_actions_key
+      shell: bash
+
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
