--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: ./react-frontend
     command: sh -c "npm run build && npx serve -s build"
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     restart: always
     networks:
       - default
@@ -14,27 +14,23 @@ services:
   backend:
     build:
       context: ./fastapi-backend
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     restart: always
     networks:
       - default
 
-#   nginx:
-#     image: nginx:latest
-#     volumes:
-#       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-#       - ./nginx/conf.d:/etc/nginx/conf.d
-#       - /etc/letsencrypt/live/www.vaifalwednesday.com/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
-#       - /etc/letsencrypt/live/www.vaifalwednesday.com/privkey.pem:/etc/ssl/private/privkey.pem:ro
-#     ports:
-#       - "80:80"
-#       - "443:443"
-#     restart: always
-#     networks:
-#       - default
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - default
 
-# networks:
-#   default:
-#     external:
-#       name: react-fastapi-digitalocean-deploy_default
+networks:
+  default:
