--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: ./react-frontend
     command: sh -c "npm run build && npx serve -s build"
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     restart: always
     networks:
       - default
@@ -14,8 +14,8 @@ services:
   backend:
     build:
       context: ./fastapi-backend
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     restart: always
     networks:
       - default
@@ -34,3 +34,4 @@ services:
 
 networks:
   default:
+    driver: bridge
